<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_acceuil"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_comics"
        android:icon="@drawable/ic_comics"
        android:title="@string/comics" />
    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies"
        android:title="@string/movies" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_series"
        android:title="@string/series" />
</menu>
