<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fond">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:layout_editor_absoluteX="58dp" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="121dp"
        android:layout_height="160dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/Astr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:defaultNavHost="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />


    <androidx.cardview.widget.CardView
        android:layout_width="395dp"
        android:layout_height="273dp"
        android:layout_margin="8dp"

        app:cardBackgroundColor="@color/fond_carte"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="108dp">

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="329dp"
            android:orientation="vertical"
            android:padding="20dp">>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/orange_circle"
                android:drawablePadding="8dp"
                android:paddingTop="22dp"
                android:text="@string/series_list"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/seeMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:background="@drawable/see_more_background"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/see_more"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="329dp"
            android:layout_marginTop="200dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/serie_thumbnail"
                android:layout_width="150dp"
                android:layout_height="177dp"
                android:layout_marginTop="68dp"
                android:paddingTop="68dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/avenger" />
            <!-- Autres détails de la série comme le studio, le nombre d'épisodes, etc. -->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_bottom_bar"
        app:itemIconTint="@color/text_bottom_bar"
        app:itemTextColor="@color/text_bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>



